--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.12.1",
+    "pg-promise": "^11.11.0"
   }
 }
